--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+Version: 80000.02-Release
+- Fixed Tradeskill Window Reagent Items
+
 Version: 80000.01-Release
 - Changed how version numbering works, for more clarity.
 - Added support for both Classic Quest Log AND World Quest Tab by requests.
