--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+Version: 80000.03-Release
+- Fixed Aura and NPC Link creation
+
 Version: 80000.02-Release
 - Fixed Tradeskill Window Reagent Items
 
