--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 Version: 80000.03-Release
+- Added support for Player Links to Wow Armory
+
+Version: 80000.03-Release
 - Fixed Aura and NPC Link creation
 
 Version: 80000.02-Release
