--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+Version: 11305.02-Classic
+ - TOC update for Classic
+
+Version: 90001.02-Retail
+ - fixed SpellBook Spells
+ - fixed Quests and WorldQuests
+
 Version: 11305.01-Classic
  - TOC update for Classic
 
